# swhat

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  agent_instructions.md  clean_build.ps1  clean_build.sh  late_night_publish_plans.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: swhat.plan.md  swhat.specify.md  swhat.tasks.md
.claude/skills/swhat-feature-workflow/: SKILL.md
.roo/commands/: swhat-plan.md  swhat-specify.md  swhat-tasks.md
.roo/skills/swhat-feature-workflow/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
.swhat/spec-execution_k7m3p9x2q4v8/: spec.md
specs/001-project-init/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-init/checklists/: requirements.md
specs/001-project-init/contracts/: cli-interface.md
specs/001-template-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-template-command/checklists/: requirements.md
specs/002-init-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-init-command/checklists/: requirements.md
specs/002-windows-support/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-windows-support/checklists/: requirements.md
specs/002-windows-support/contracts/: build-interface.md
src/swhat/: __init__.py  cli.py  init.py  init_cli.py  template_cli.py  templates.py
src/swhat/commands/: __init__.py  claude_feature_skill.py  claude_plan_command.py  claude_specify_command.py  claude_tasks_command.py  roo_feature_skill.py  roo_plan_command.py  roo_specify_command.py  roo_tasks_command.py
src/swhat/templates/: __init__.py  checklist_template.py  plan_template.py  spec_template.py  tasks_template.py
