[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swhat"
version = "0.1.0"
description = "Specification-driven development CLI - Transform natural language feature descriptions into AI-implementable execution plans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "swhat contributors" }
]
keywords = ["cli", "specification", "ai", "development", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "cmake>=3.16",
]

[project.scripts]
swhat = "swhat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swhat"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
